--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %}Ladle About {% endblock %}
 
 {% block body %}
-<div id="top">
+<div class="content-center">
     <h1> Ladle's Purpose </h1>
     <p class="highlight-blue">Designed for curious minds</p>
 </div>
