--- a/templates/subreddit.html
+++ b/templates/subreddit.html
@@ -10,11 +10,14 @@
         </h2>
 
     </div>
+    <div class="subreddit-info medium-margin">
     <p class="highlight-purple">{{subreddit.subs}} subscribers</p>
 
     <p class="smaller-text">Created on {{subreddit_created}}</p>
     <img src="{{ subreddit_bg }}">
     <img src="{{ subreddit_icon }}">
     <p><b>Description: </b>{{subreddit.desc}}</p>
+    </div>
+
 </div>
 {% endblock %}
