--- a/templates/user.html
+++ b/templates/user.html
@@ -4,10 +4,10 @@
 {% block body %}
 <div class="user-container">
     <h2>u/{{person.who}}</h2>
-    <img src="{{ person_icon }}" height="32px" />
+    <img src="{{ person_icon }}" class="user-pfp" />
     <p class="user-karma highlight-green"> <b>Karma:</b> {{person.l_karma}}  for posts | {{person.c_karma}} for comments </p>
     <p>Account created <span class="highlight-orange">{{person_made}}</span> </p>
-    <div id="spacer"></div>
+    <div class="spacer"></div>
     <div>
         <h3>Recent Posts</h3>
         <p>...</p>
