--- a/templates/404.html
+++ b/templates/404.html
@@ -3,21 +3,21 @@
 {% block title %}Ladle 404{% endblock %}
 
 {% block body %}
-<div id="top">
+<div class="content-center">
    <h1>Ladle's Lost...</h1>
    <p class="highlight-red"><span>Ladle has encountered an error as the link or page you tried to navigate to doesn't
          exist on our servers.</span></p>
 </div>
-<div id="spacer"></div>
-<div id="go-home" class="twenty-margin">
+<div class="spacer"></div>
+<div id="go-home" class="medium-margin">
    <p> Head back to the front page: <a href="/">Home</a>
    <div class="error-message">
       <p>{{error}}</p>
    </div>
 </div>
-<div id="spacer"></div>
+<div class="spacer"></div>
 <hr>
-<div id="foot" class="twenty-margin">
+<div id="foot" class="medium-margin">
    <p class="issue smaller-text"> Open an issue to describe your problem: </p>
    <a href="https://github.com/pqba/Ladle/issues" class="github-link" target="_blank">
       <div class="github-icon"></div>
