--- a/templates/500.html
+++ b/templates/500.html
@@ -3,14 +3,14 @@
 {% block title %}Ladle Internal Error{% endblock %}
 
 {% block body %}
-<div id="top">
+<div class="content-center">
     <h1>Ladle's Confused</h1>
     <p class="highlight-red"><span>Ladle has encountered an error on our end. </span></p>
 </div>
-<div id="spacer"></div>
+<div class="spacer"></div>
 <div id="go-home" class="twenty-margin">
     <p> Head back to the front page: <a href="/">Home</a>
-    <div id="spacer"></div>
+    <div class="spacer"></div>
     <div class="error-message">
         <p>{{error}}</p>
     </div>
