--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Ladle {{person.who}} {% endblock %}
+{% block title %} Ladle u/{{person.who}} {% endblock %}
 
 {% block body %}
 <div class="user-container">
