Create template article class, improve backend

--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="post-container">
-    <a class="post-link" href="{{ p_url }}">
+    <a class="post-link" href="{{ p_link }}">
         <h2>{{info.title}} {% if info.nsfw == true %}
             <img src="/static/images/warning.svg" height="24px" />
             {% endif %}
