--- a/templates/sub_form.html
+++ b/templates/sub_form.html
@@ -6,7 +6,7 @@
    <p class="highlight-orange"><span>Specify which subreddits you wish to view with this form.</span></p>
 </div>
 <div class="subreddit-button">
-    <form method="POST" action="/subreddit_button">
+    <form method="POST" action="/subreddit_button"  autocomplete="off">
          <div class="double-spacer">
          <h3 class="highlight-blue">Use Curated Lists</h3>
       </div>
