--- a/templates/post.html
+++ b/templates/post.html
@@ -27,9 +27,7 @@
         <img src="/static/images/lock.svg" height="24px" />
         {% endif %}
         <div class="md-text">{{ p_text | safe }}</div>
-        {% if img_post == true %}
-        <div class="content-center spacer"><img src="{{ p_url }}"  class="post-image" crossorigin="anonymous" referrerpolicy="no-referrer"/></div>
-        {% endif %}
+        {{ p_article | safe }}
     </div>
     <div class="post-stats">
         <p> <img src="/static/images/up-arrow.svg" class="upvote-img"> {{info.score}} [{{info.ratio}}%] | {{info.nc}}
