--- a/templates/subreddit_search.html
+++ b/templates/subreddit_search.html
@@ -24,7 +24,7 @@
       <a href="/post/{{ result[0] }}" class="post-link">
         <p>{{ result[3] }} </p>
       </a>
-      <img src="/static/images/up-arrow.svg" class="upvote-img"> {{ result[1] }} | {{ result[2] }} comments | &nbsp;Posted {{ result[4] }}
+      <div class="icon-container"><div class="up-icon"></div> {{ result[1] }} | {{ result[2] }} comments | &nbsp;Posted {{ result[4] }} </div>
     </li>
     {% endfor %}
   </ul>
